--- a/packet/build.gradle
+++ b/packet/build.gradle
@@ -6,25 +6,25 @@ plugins {
 }
 
 android {
-    compileSdk = 33
+    compileSdk  33
 
     defaultConfig {
 
-        minSdk = 21
-        targetSdk = 33
-        vectorDrawables.useSupportLibrary = true
+        minSdk 21
+        targetSdk  33
+        vectorDrawables.useSupportLibrary  true
 
     }
 
     buildTypes {
         release {
-            isMinifyEnabled = true
+            minifyEnabled false
         }
     }
 }
 
 dependencies {
-    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.8.10")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.8.0")
     implementation ("androidx.core:core-ktx:1.10.1")
 }
 
