--- a/packet/build.gradle
+++ b/packet/build.gradle
@@ -24,8 +24,8 @@ android {
 }
 
 dependencies {
-    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.8.0")
     implementation ("androidx.core:core-ktx:1.10.1")
+    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
 }
 
 afterEvaluate {
