Updated gradle, plugin and compile sdk

--- a/packet/build.gradle
+++ b/packet/build.gradle
@@ -27,6 +27,9 @@ android {
             withSourcesJar()
         }
     }
+
+    
+    namespace 'com.packet'
 }
 ext{
     lifecycle_version = '2.7.0'
