--- a/packet/build.gradle
+++ b/packet/build.gradle
@@ -36,6 +36,14 @@ android {
         jvmToolchain(17)
     }
 
+    buildFeatures {
+        compose true
+        buildConfig true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.10'
+    }
+
     namespace 'com.packet'
 }
 ext{
@@ -43,11 +51,18 @@ ext{
 }
 
 dependencies {
-    implementation ("androidx.core:core-ktx:1.10.1")
-    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+    implementation ("androidx.core:core-ktx:1.12.0")
+//    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
 
     implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+
+    def composeBom = platform('androidx.compose:compose-bom:2024.02.02')
+    implementation composeBom
+    androidTestImplementation composeBom
+
+    implementation "androidx.compose.ui:ui"
+    implementation 'androidx.compose.foundation:foundation'
 }
 
 afterEvaluate {
@@ -57,7 +72,7 @@ afterEvaluate {
                 from components.release
                 groupId = "com.github.walaankit"
                 artifactId = "Packet"
-                version = "0.1.9"
+                version = "0.1.10"
             }
         }
     }
