Updated group id to test

--- a/packet/build.gradle
+++ b/packet/build.gradle
@@ -83,7 +83,7 @@ dependencies {
 publishing {
     publications {
         release(MavenPublication) {
-            groupId = "com.github.walaankit"
+            groupId = "com.packet"
             artifactId = "Packet"
             version = "0.1.11"
 
